--- a/index.html
+++ b/index.html
@@ -26,5 +26,20 @@
                 
     </section>
 
+        <section class="container secundario">
+
+            <img src="image/Plataformas.png" alt="Monitor" class="secundario_imagem">
+
+            <div class="container_descricao">
+                <h2 class="descricao_titulo">
+                    Assista do seu jeito
+                </h2>
+
+                <p class="descricao_texto">
+                    Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. 
+                    Nossa seleção de cursos não para de crescer.
+                </p>
+            </div>
+        </section>
 </body>
 </html>
