--- a/index.html
+++ b/index.html
@@ -41,5 +41,18 @@
                 </p>
             </div>
         </section>
+
+        <section class="container secundario">
+                <div class="container_descricao">
+                    <p class="descricao_texto">
+                        Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas 
+                        áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.
+                    </p>
+
+                    <a href="https://www.alura.com.br/planos-cursos-online" class="container_botao secundario_botao" container>Assine o Combo+</a>
+                </div>
+
+                <img src="image/Telas.png" alt="telas" class="secundario_imagem">
+        </section>
 </body>
 </html>
