--- a/index.html
+++ b/index.html
@@ -54,5 +54,20 @@
 
                 <img src="image/Telas.png" alt="telas" class="secundario_imagem">
         </section>
+
+        <section class="container secundario">
+                <img src="image/Notebook.png" alt="Notebook" class="secundario_imagem">
+
+                <div class="container_descricao">
+                    <h2 class="descricao_titulo">
+                        Baixe seus cursos
+                    </h2>
+
+                    <p class="descricao_texto">
+                        Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre 
+                        com você, até mesmo sem internet.
+                    </p>
+                </div>
+        </section>
 </body>
 </html>
