tela dos dispositivos

--- a/index.html
+++ b/index.html
@@ -69,5 +69,34 @@
                     </p>
                 </div>
         </section>
+
+        <section class="dispositivos">
+                <h2 class="dispositivos_titulo">
+                    Disponível nos seus dispositivos favoritos
+                </h2>
+
+                <ul class="dispositivos_lista">
+                    <li>
+                        <img src="image/tv.png">
+                        <h3 class="lista_item">
+                            TV
+                        </h3>
+                    </li>
+
+                    <li>
+                        <img src="image/computador.png">
+                        <h3 class="lista_item">
+                            Computadores
+                        </h3>
+                    </li>
+
+                    <li>
+                        <img src="image/celular.png">
+                        <h3 class="lista_item">
+                            Celulares e tablets
+                        </h3>
+                    </li>
+                </ul>
+        </section>
 </body>
 </html>
